suaw file