@@ -1,76 +1,96 @@
 package com.example.servingwebcontent.manager;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+import com.example.servingwebcontent.model.CauThu;
+import com.example.servingwebcontent.repository.CauThuRepository;
+
+import jakarta.annotation.PostConstruct;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.Scanner;
-import java.util.stream.Collectors;
-import com.example.servingwebcontent.model.CauThu;
+import java.util.Optional;
+
+@Component
 public class CauThuService {
-    private static final Scanner scanner = new Scanner(System.in);
-    public void themCauThu(List<CauThu> danhSach) {
-        System.out.print("Nhập mã: ");
-        String ma = scanner.nextLine();
-        System.out.print("Nhập họ tên: ");
-        String hoTen = scanner.nextLine();
-        System.out.print("Nhập vị trí: ");
-        String viTri = scanner.nextLine();
-        System.out.print("Nhập số áo: ");
-        int soAo = Integer.parseInt(scanner.nextLine());
-        System.out.print("Nhập quốc tịch: ");
-        String quocTich = scanner.nextLine();
-        System.out.print("Nhập chiều cao: ");
-        String chieuCao = scanner.nextLine();
-        System.out.print("Nhập cân nặng: ");
-        String canNang = scanner.nextLine();
-        System.out.print("Nhập số bàn thắng: ");
-        int soBanThang = Integer.parseInt(scanner.nextLine());
-        System.out.print("Nhập số thẻ vàng: ");
-        int theVang = Integer.parseInt(scanner.nextLine());
-        System.out.print("Nhập số thẻ đỏ: ");
-        int theDo = Integer.parseInt(scanner.nextLine());
-        System.out.print("Nhập ngày sinh (dd/MM/yyyy): ");
-        LocalDate ngaySinh = LocalDate.parse(scanner.nextLine(), DateTimeFormatter.ofPattern("dd/MM/yyyy"));
-        System.out.print("Nhập ngày hết hạn hợp đồng (dd/MM/yyyy): ");
-        LocalDate ngayHetHan = LocalDate.parse(scanner.nextLine(), DateTimeFormatter.ofPattern("dd/MM/yyyy"));
-        CauThu ct = new CauThu(ma, hoTen, viTri, soAo, quocTich, chieuCao, canNang, soBanThang, theVang, theDo, ngaySinh, ngayHetHan);
-        danhSach.add(ct);
-        System.out.println("Thêm cầu thủ thành công.");
+
+    @Autowired
+    private CauThuRepository cauThuRepository;
+
+    private static final DateTimeFormatter df = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+
+    public void themCauThu(CauThu ct) {
+        try {
+            cauThuRepository.save(ct);
+            System.out.println("Đã thêm cầu thủ: " + ct.getHoTen());
+        } catch (Exception e) {
+            System.out.println("Lỗi khi thêm cầu thủ: " + e.getMessage());
+        } finally {
+            System.out.println("Hoàn tất thao tác thêm cầu thủ.");
+        }
     }
-    public static void suaCauThu(List<CauThu> danhSach, String ma, String tenMoi, int soAoMoi) {
-        for (CauThu ct : danhSach) {
-            if (ct.getMa().equals(ma)) {
-                ct.setHoTen(tenMoi);
+
+    public void suaCauThu(String maCauThu, String hoTenMoi, int soAoMoi) {
+        try {
+            Optional<CauThu> optional = cauThuRepository.findById(maCauThu);
+            if (optional.isPresent()) {
+                CauThu ct = optional.get();
+                ct.setHoTen(hoTenMoi);
                 ct.setSoAo(soAoMoi);
-                System.out.println("Cập nhật thành công!");
-                return;
+                cauThuRepository.save(ct);
+                System.out.println("Đã cập nhật thông tin cầu thủ có mã " + maCauThu);
+            } else {
+                System.out.println("Không tìm thấy cầu thủ có mã " + maCauThu);
             }
-        }
-        System.out.println("Không tìm thấy cầu thủ để sửa.");
-    }
-    public static void xoaCauThu(List<CauThu> danhSach, String ma) {
-        boolean removed = danhSach.removeIf(ct -> ct.getMa().equals(ma));
-        if (removed) {
-            System.out.println("Xóa thành công!");
-        } else {
-            System.out.println("Không tìm thấy cầu thủ để xóa.");
+        } catch (Exception e) {
+            System.out.println("Lỗi khi sửa cầu thủ: " + e.getMessage());
+        } finally {
+            System.out.println("Hoàn tất thao tác sửa cầu thủ.");
         }
     }
-    public static List<CauThu> timKiem(
-        List<CauThu> danhSach,
-        String ma,
-        String ten,
-        String viTri,
-        Integer soAo,
-        String quocTich,
-        String chieuCao,
-        String canNang,
-        Integer soBanThang,
-        Integer theVang,
-        Integer theDo
-    ) {
-        List<CauThu> ketQua = danhSach.stream().filter(ct ->
+
+    public void xoaCauThu(String maCauThu) {
+        try {
+            Optional<CauThu> optional = cauThuRepository.findById(maCauThu);
+            if (optional.isPresent()) {
+                System.out.println("Đã xóa cầu thủ: " + optional.get().getHoTen());
+                cauThuRepository.deleteById(maCauThu);
+            } else {
+                System.out.println("Không tìm thấy cầu thủ có mã " + maCauThu);
+            }
+        } catch (Exception e) {
+            System.out.println("Lỗi khi xóa cầu thủ: " + e.getMessage());
+        } finally {
+            System.out.println("Hoàn tất thao tác xóa cầu thủ.");
+        }
+    }
+
+    public void hienThiDanhSachCauThu() {
+        try {
+            List<CauThu> danhSach = cauThuRepository.findAll();
+            if (danhSach.isEmpty()) {
+                System.out.println("Đội bóng chưa có cầu thủ nào.");
+            } else {
+                System.out.println("Danh sách cầu thủ:");
+                for (CauThu ct : danhSach) {
+                    ct.hienThiThongTin();
+                    System.out.println("------");
+                }
+            }
+        } catch (Exception e) {
+            System.out.println("Lỗi khi hiển thị danh sách: " + e.getMessage());
+        } finally {
+            System.out.println("Hoàn tất thao tác hiển thị danh sách.");
+        }
+    }
+
+    public List<CauThu> timKiemTheoTieuChi(String ma, String ten, String viTri, Integer soAo,
+                                           String quocTich, String chieuCao, String canNang,
+                                           Integer soBanThang, Integer theVang, Integer theDo) {
+        List<CauThu> ketQua = cauThuRepository.findAll();
+        return ketQua.stream().filter(ct ->
             (ma == null || ct.getMa().equalsIgnoreCase(ma)) &&
-            (ten == null || ct.getHoTen().toLowerCase().contains(ten.toLowerCase())) &&
+            (ten == null || ct.getHoTen().equalsIgnoreCase(ten)) &&
             (viTri == null || ct.getViTri().equalsIgnoreCase(viTri)) &&
             (soAo == null || ct.getSoAo() == soAo) &&
             (quocTich == null || ct.getQuocTich().equalsIgnoreCase(quocTich)) &&
@@ -79,32 +99,45 @@ public class CauThuService {
             (soBanThang == null || ct.getSoBanThang() == soBanThang) &&
             (theVang == null || ct.getTheVang() == theVang) &&
             (theDo == null || ct.getTheDo() == theDo)
-        ).collect(Collectors.toList());
-        if (ketQua.isEmpty()) {
-            System.out.println("Không tìm thấy cầu thủ nào.");
-        } else {
-            System.out.println("Kết quả tìm kiếm:");
-            for (CauThu ct : ketQua) {
-                ct.hienThiThongTin();
-                System.out.println("-----------");
+        ).toList();
+    }
+
+    public List<CauThu> getDanhSach() {
+        return cauThuRepository.findAll();
+    }
+
+    @PostConstruct
+    public void khoiTaoDuLieuMau() {
+        try {
+            if (!cauThuRepository.existsById("CT001")) {
+                CauThu cauThuMau = new CauThu(
+                    "CT001",
+                    "Nguyễn Văn A",
+                    "Tiền đạo",
+                    9,
+                    "Việt Nam",
+                    "1m75",
+                    "70kg",
+                    10,
+                    1,
+                    0,
+                    LocalDate.parse("01/01/1995", df),
+                    LocalDate.parse("31/12/2025", df)
+                );
+                cauThuRepository.save(cauThuMau);
+                System.out.println("Đã thêm cầu thủ mẫu khi khởi động ứng dụng.");
             }
-        }
-        return ketQua;
-    }
-    public void hienThiDanhSach(List<CauThu> danhSach) {
-    if (danhSach.isEmpty()) {
-        System.out.println("Danh sách cầu thủ trống.");
-    } else {
-        System.out.println("===== Danh sách cầu thủ =====");
-        System.out.printf("%-10s %-20s %-5s %-15s %-15s %-15s %-10s %-15s %-15s %-15s%n",
-                "Mã", "Tên", "Tuổi", "Vị trí", "Quốc tịch", "CLB", "Số áo", "Bàn thắng", "Thẻ vàng", "Thẻ đỏ");
-
-        for (CauThu ct : danhSach) {
-            System.out.printf("%-10s %-20s %-5d %-15s %-15s %-15s %-10s %-15d %-15d %-15d%n",
-                    ct.getMa(), ct.getHoTen(), ct.getTuoi(), ct.getViTri(), ct.getQuocTich(),
-                    ct.getSoAo(), ct.getSoBanThang(), ct.getTheVang(), ct.getTheDo());
+        } catch (Exception e) {
+            System.out.println("Lỗi khi tạo cầu thủ mẫu: " + e.getMessage());
         }
     }
-}
 
+    public List<CauThu> timKiem(String ma, String ten, String viTri, Integer tuoi, String quocTich, Integer soAo,
+                                 Integer banThang, Integer theVang, Integer theDo) {
+        throw new UnsupportedOperationException("Unimplemented method 'timKiem'");
+    }
+
+    public Object findById(String string) {
+        throw new UnsupportedOperationException("Unimplemented method 'findById'");
+    }
 }
